# lothar

./: .gitignore  CMakeLists.txt  LICENSE.md  Lothar.md  README.md  doxyfile-c  doxyfile-c++  setup.py
examples/colorsorter/: colorsorter1.py  colorsorter2.py  colorsorter3.py  utils.py
examples/shooterbot/: shooterbot1.py  shooterbot2.py  shooterbot3.py  shooterbot4.py  shooterutils.py
src/: commands.c  connection.c  error_handling.c  heap.c  heap.h  motor.c  scheduler.c  sensor.c  steering.c  utils.c  vector.c  vector.h
src/bluetooth/: bluez.c  dummybluetooth.c  win32bluetooth.c
src/include/: commands.h  config.h.in  connection.h  error_handling.h  lothar.h  motor.h  scheduler.h  sensor.h  steering.h  utils.h
src/usb/: dummyusb.c  libusb-0.1.c  libusb.c
tests/: commands.cc  connectionmock.cc  connectionmock.hh  error_handling.cc  manualtest.py  test.py  testcases.py  utils.cc
wrappers/c++/: commands.cc  connection.cc  motor.cc  scheduler.cc  sensor.cc
wrappers/c++/include/: commands.hh  connection.hh  error_handling.hh  lothar.hh  motor.hh  scheduler.hh  sensor.hh  steering.hh  utils.hh
wrappers/python/: connection.c  motor.c  pylothar.c  pylothar.h  scheduler.c  sensor.c  steering.c
